--- a/manReader_main/.env
+++ b/manReader_main/.env
@@ -1,5 +1,5 @@
 SECRET_KEY=django-insecure-f@zp)j0&egr-ift(q7gqcui08krzg5fzexz)b=7nabyee^fb$^
-DEBUG=False
+DEBUG=True
 
 # Database configuration
 DB_NAME=manReader_db
